EK - Changes to the menu of the website.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <nav class="main-nav">
+            <img id="logo" src="./assets/ca.png" alt="logo"/>
             <ul>
                 <li class="active"><a href="index.html">Accueil</a></li>
                 <li class=""><a href="./tp2.html">TP2</a></li>
