--- a/tp3.html
+++ b/tp3.html
@@ -11,12 +11,12 @@
     <body>
         <header>
             <nav class="main-nav">
+                <img id="logo" src="./assets/ca.png" alt="logo"/>
                 <ul>
                     <li class=""><a href="index.html">Accueil</a></li>
-                    <li class="active"><a href="./tp2.html">TP2</a></li>
-                    <li class=""><a href="./tp3.html">TP3</a></li>
+                    <li class=""><a href="./tp2.html">TP2</a></li>
+                    <li><a class="active" href="./tp3.html">TP3</a></li>
                 </ul>
-                <img href="assets/ca.png"/>
             </nav>
         </header>
 
