--- a/tp2.html
+++ b/tp2.html
@@ -11,6 +11,7 @@
     <body>
         <header>
             <nav class="main-nav">
+                <img id="logo" src="./assets/ca.png" alt="logo"/>
                 <ul>
                     <li class=""><a href="index.html">Accueil</a></li>
                     <li class="active"><a href="./tp2.html">TP2</a></li>
