EK - Changes to the CSS of the website.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CurriculumAnalitica — Accueil</title>
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/scenarimage.css">
     <link rel="stylesheet" href="./css/print.css" media="print">
@@ -22,7 +23,7 @@
         </nav>
     </header>
 
-    <h1>CurriculumAnalitica — Scénarimages</h1>
+    <h1>CurriculumAnalytica — Scénarimages</h1>
     
     <main>
         <section id="tp-grid">
