--- a/tp3.html
+++ b/tp3.html
@@ -15,12 +15,12 @@
                 <ul>
                     <li class=""><a href="index.html">Accueil</a></li>
                     <li class=""><a href="./tp2.html">TP2</a></li>
-                    <li><a class="active" href="./tp3.html">TP3</a></li>
+                    <li class="active"><a href="./tp3.html">TP3</a></li>
                 </ul>
             </nav>
         </header>
 
-        <h1>Scénarimage de l'application Curriculum Analitica - Version du TP3</h1>
+        <h1>Scénarimage de l'application Curriculum Analytica - Version du TP3</h1>
         
         <div id="screens">
             <div class="screen">
