EK - Final changes to the website.

--- a/tp3.html
+++ b/tp3.html
@@ -252,10 +252,10 @@
                     <p class="page">
                         <h3>Page : </h3> Page de connexion.
                     </p>
-                    <p class="action">
+                    <!-- <p class="action">
                         <h3>Action : </h3>
                         ???
-                    </p>
+                    </p> -->
                 </div>
             </div>
             <!-- <div class="screen hidden">
